<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

	<LinearLayout android:id="@+id/splash1"
		android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="@drawable/intro" />

	<LinearLayout android:id="@+id/splash2"
		android:orientation="vertical"
		android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="@drawable/info"
	    android:visibility="gone"  >
	    
	    <TextView 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center_horizontal"
		    android:text="@string/usage_info_header"
		    android:background="#8e8e8e"
		    android:textColor="#ffffff"
		    android:textStyle="bold"
		    android:textSize="17dip"
		    android:padding="2dip" />
		    
	    <TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/usage_info_body"
		    android:textColor="#555555"
		    android:textSize="13dip"
		    android:paddingTop="45dip"
		    android:paddingLeft="25dip"
		    android:paddingRight="25dip" />

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		    android:textColor="#555555"
		    android:paddingLeft="25dip"
		    android:paddingRight="25dip"  >  
		    
			<CheckBox android:id="@+id/usage_checkbox"
				android:layout_width="wrap_content"
			    android:layout_height="wrap_content" />
			   
			<TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
		    	android:textSize="13dip"
		    	android:textColor="#555555"
			    android:text="@string/usage_info_cb" />
			    
	    </LinearLayout>
	    
	    <LinearLayout
			android:orientation="horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal" > 
		    
		    <Button android:id="@+id/usage_button"
	    	    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:background="@drawable/button"
			    android:layout_margin="1dip"
			    android:paddingTop="5dip"
			    android:paddingBottom="5dip"
			    android:paddingLeft="30dip"
			    android:paddingRight="30dip"
		    	android:textSize="14dip"
			    android:text=" 동의함 " />
			    
		</LinearLayout>
		    
	</LinearLayout>
    
</LinearLayout>
